syntax = "proto3";
package desmos.subspaces.v3;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

import "desmos/subspaces/v3/models_feegrant.proto";

option go_package = "github.com/desmos-labs/desmos/v4/x/subspaces/types";

// MsgGrantAllowance creates a new grant from the grantee to the grantee,
// within the given subspace
message MsgGrantAllowance {
    // Id of the subspace inside which where the allowance should be granted
    uint64 subspace_id = 1 [
      (gogoproto.customname) = "SubspaceID",
      (gogoproto.moretags) = "yaml:\"subspace_id\""
    ];
    // Address of the user granting the allowance
    string granter = 2 [ (gogoproto.moretags) = "yaml:\"granter\"" ];
    // Target being granted the allowance
    google.protobuf.Any grantee = 3 [
      (cosmos_proto.accepts_interface) = "Grantee",
      (gogoproto.moretags) = "yaml:\"grantee\""
    ];
    // Allowance can be any allowance type that implements AllowanceI
    google.protobuf.Any allowance = 4 [
      (cosmos_proto.accepts_interface) = "AllowanceI",
      (gogoproto.moretags) = "yaml:\"allowance\""
    ];
  }
  
  // MsgGrantAllowanceResponse defines the Msg/GrantAllowanceResponse response
  // type.
  message MsgGrantAllowanceResponse {}
  
  // MsgRevokeAllowance removes any existing allowance created from granter to
  // the grantee inside the given subspace
  message MsgRevokeAllowance {
    // If of the subspace inside which the allowance to be deleted is
    uint64 subspace_id = 1 [
      (gogoproto.customname) = "SubspaceID",
      (gogoproto.moretags) = "yaml:\"subspace_id\""
    ];
    // Address of the user that created the allowance
    string granter = 2 [ (gogoproto.moretags) = "yaml:\"granter\"" ];
    // Target being granted the allowance
    google.protobuf.Any grantee = 3 [
      (cosmos_proto.accepts_interface) = "Grantee",
      (gogoproto.moretags) = "yaml:\"grantee\""
    ];
  }
  
  // MsgRevokeAllowanceResponse defines the Msg/RevokeAllowanceResponse
  // response type.
  message MsgRevokeAllowanceResponse {}